trying to understand the raw data and quality of the three replicates

--- a/02-Yap1-ChIP/analysis/chip-main-analysis.Rmd
+++ b/02-Yap1-ChIP/analysis/chip-main-analysis.Rmd
@@ -40,7 +40,7 @@ gpl8477 <- getGEO(filename = "../data/raw-chip-gpr/GPL8477_family.soft.gz")
 
 ```{r data_QC}
 # MA plot
-plotMD(RG)
+plotMD(RG, column=1)
 # Boxplot for the background intensities
 boxplot(data.frame(log2(RG$Gb)),main="Green background")
 boxplot(data.frame(log2(RG$Rb)),main="Red background")
