--- a/02-Yap1-ChIP/analysis/chip-main-analysis.Rmd
+++ b/02-Yap1-ChIP/analysis/chip-main-analysis.Rmd
@@ -27,20 +27,32 @@ require(GEOquery)
 
 There are three files in total, corresponding to the three replicates, with the names of GSM397447,48,49
 
-```{r load_data}
+```{r load_and_process_data}
+# first load the data for QC. Note that these files will not be used in latter analysis
+# see doc/notes-hb.org for reasons
+
 # load target data frame, containing the sample information and file names
-targets <- readTargets("../data/raw-chip-gpr/yap1-chip-sample.txt",row.names = "Name")
+targets <- readTargets("../data/yap1-chip-sample.txt",row.names = "Name")
 # add relative path
-targets$FileName <- paste("../data/raw-chip-gpr/",targets$FileName,sep="")
+targets$FileName <- paste("../data/",targets$FileName,sep="")
 # load raw data
 RG <- read.maimages(targets, source="genepix")
-# load platform (microarray) design
-gpl8477 <- getGEO(filename = "../data/raw-chip-gpr/GPL8477_family.soft.gz")
+# background correction using normexp method
+RGb <- backgroundCorrect(RG, method="normexp", offset=50)
+
+# the normexp method was recommended by LIMMA manual. within array normalization is then applied on the background corrected dataset
+MA <- normalizeWithinArrays(RGb)
 ```
 
-```{r data_QC}
+```{r data_QC,fig.path="../output/figure/", dev=c("png")}
+
+# plot QC in a pdf file
+# pdf(paste("../output/figure/",format(Sys.time(),"%Y-%m-%d-"),"data-qc.pdf",sep=""))
+
 # MA plot
 plotMD(RG, column=1)
+plotMD(RG, column=2)
+plotMD(RG, column=3)
 # Boxplot for the background intensities
 boxplot(data.frame(log2(RG$Gb)),main="Green background")
 boxplot(data.frame(log2(RG$Rb)),main="Red background")
@@ -52,13 +64,27 @@ imageplot(log2(RG$Gb[,1]),RG$printer, main = "array 1, Green")
 imageplot(log2(RG$Rb[,1]),RG$printer, main = "array 1, Red")
 imageplot(log2(RG$Gb[,3]),RG$printer, main = "array 3, Green")
 imageplot(log2(RG$Rb[,3]),RG$printer, main = "array 3, Red")
+# background corrected MA plots
+plotMD(RGb, column=1)
+plotMD(RGb, column=2)
+plotMD(RGb, column=3)
+# after LOESS within array normalization
+plotMD(MA, column=1)
+plotMD(MA, column=2)
+plotMD(MA, column=3)
+
+# dev.off()
 ```
 
-```{r pre_processing}
-RGb1 <- backgroundCorrect(RG, method="subtract")
-RGb2 <- backgroundCorrect(RG, method="normexp", offset=50)
-plotMD(RGb1, column=2)
-plotMD(RGb2, column=2)
-# the normexp method was recommended by LIMMA manual. within array normalization is then applied on the background corrected dataset
-MA <- normalizeWithinArrays(RGb2)
-```
+## Problem with the raw gpr file
+
+I previously downloaded the supplementary tar ball from the GEO [main page](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE15818) for the paper. File name is GSE15818<sub>RAW.tar</sub>, which contains one gzipped .gpr file for each sample. I then used `getGEO()` function in `R/GEOquery` to load it into the memory. I then followed LIMMA manual to perform some exploratory analysis on the raw data file stored in an object named RG (stands for RedGreen). I have several confusions:
+
+1.  The raw intensity values for the third chip (GSM397449) appears to be much lower than the rest two
+2.  ChIP 2 (GSM397448) has unusual background (`imageplot()` shows spill like patterns on the slide)
+3.  After background correction and within array normalization, the outliers of the log10 Cy5/Cy3 ratio appears to be mostly negative, even though Cy5 is supposed to be IP-enriched and Cy3 for input.
+
+## Conclusion
+
+-   Still couldn't figure out how the authors derived the normalized log10 ratios from their raw data. My test yielded largely negative outliers (meaning IP DNA is less than input)
+-   Learning how to parse the various formats of GEO datasets (SOFT format have a number of different formatting) is challenging. It might be easier to just extract the matrix of normalized data and use that as input for MochiView or peak finding software
