added analysis tool for CgYap1 targets GO annotations

--- a/05-meta-analysis/Table/Get Annotations.ipynb
+++ b/05-meta-analysis/Table/Get Annotations.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "345\n"
+     ]
+    }
+   ],
    "source": [
     "import _pickle as pickle\n",
     "\n",
@@ -169,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,6 +997,68 @@
    "outputs": [],
    "source": [
     "annoTable.to_csv(\"AnnotationFrequency.csv\", sep=\",\", index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "345\n",
+      "['CAGL0C01705g', 'CAGL0H04631g', 'CAGL0I01166g', 'CAGL0K06259g', 'CAGL0K10868g', 'CAGL0L05258g']\n",
+      "['CAGL0B01419g', 'CAGL0B02607g', 'CAGL0B03069g', 'CAGL0C01727g', 'CAGL0D01496g', 'CAGL0D05434g', 'CAGL0D05478g', 'CAGL0D06138g', 'CAGL0E05170g', 'CAGL0F01793g', 'CAGL0F07359g', 'CAGL0F07513g', 'CAGL0F09097g', 'CAGL0G03223g', 'CAGL0G06182g', 'CAGL0G09405r', 'CAGL0H00704g', 'CAGL0H01375g', 'CAGL0H02739g', 'CAGL0H04653g', 'CAGL0H05951g', 'CAGL0H06017g', 'CAGL0H10142g', 'CAGL0I00726g', 'CAGL0I00748g', 'CAGL0I04884g', 'CAGL0J07612g', 'CAGL0J09680g', 'CAGL0K00803g', 'CAGL0K01727g', 'CAGL0K03531g', 'CAGL0K03553g', 'CAGL0K08162g', 'CAGL0K08184g', 'CAGL0K09350g', 'CAGL0K10879g', 'CAGL0K11858g', 'CAGL0K11880g', 'CAGL0L04664g', 'CAGL0L05280g', 'CAGL0L05742g', 'CAGL0L13365r', 'CAGL0L13376g', 'CAGL0L13387r', 'CAGL0L13392g', 'CAGL0M02607g', 'CAGL0M02629g', 'CAGL0M05819g', 'CAGL0M11682g', 'CAGL0M11704g']\n",
+      "['CAGL0A00495g', 'CAGL0A00517g', 'CAGL0B00990g', 'CAGL0B01188g', 'CAGL0B01203g', 'CAGL0B02651g', 'CAGL0B02673g', 'CAGL0B03685g', 'CAGL0B04257g', 'CAGL0B04279g', 'CAGL0B04301g', 'CAGL0C00253g', 'CAGL0C01661g', 'CAGL0C01683g', 'CAGL0C03355g', 'CAGL0C03531g', 'CAGL0C03597g', 'CAGL0C03608g', 'CAGL0D00572g', 'CAGL0D02134g', 'CAGL0D02150g', 'CAGL0D03256g', 'CAGL0D03278g', 'CAGL0D05456g', 'CAGL0E00187g', 'CAGL0E01353g', 'CAGL0E04774g', 'CAGL0E04884g', 'CAGL0E05390g', 'CAGL0E05412g', 'CAGL0F00715g', 'CAGL0F00737g', 'CAGL0F00869g', 'CAGL0F02717g', 'CAGL0F02893g', 'CAGL0F03069g', 'CAGL0F03113g', 'CAGL0F04983g', 'CAGL0F05137g', 'CAGL0F05247g', 'CAGL0F06611g', 'CAGL0F08833g', 'CAGL0G01672g', 'CAGL0G01694g', 'CAGL0G02079g', 'CAGL0G04873g', 'CAGL0G04895g', 'CAGL0G05027g', 'CAGL0G05467g', 'CAGL0G05808g', 'CAGL0G06512r', 'CAGL0G07469g', 'CAGL0G07491g', 'CAGL0G07865g', 'CAGL0G08195g', 'CAGL0H03289g', 'CAGL0H06853g', 'CAGL0H09130g', 'CAGL0H09988g', 'CAGL0I00440g', 'CAGL0I00572g', 'CAGL0I00946g', 'CAGL0I01320g', 'CAGL0I01870g', 'CAGL0I02442g', 'CAGL0I02464g', 'CAGL0I02574g', 'CAGL0I03432g', 'CAGL0I04004g', 'CAGL0I05236g', 'CAGL0I05390g', 'CAGL0I08635g', 'CAGL0I09108g', 'CAGL0I09130g', 'CAGL0I09504g', 'CAGL0J00561g', 'CAGL0J00583g', 'CAGL0J01067g', 'CAGL0J04664g', 'CAGL0J05346g', 'CAGL0J06380g', 'CAGL0J07502g', 'CAGL0J07568g', 'CAGL0J07590g', 'CAGL0J10758g', 'CAGL0K00759g', 'CAGL0K00781g', 'CAGL0K02739g', 'CAGL0K02761g', 'CAGL0K03443g', 'CAGL0K03459g', 'CAGL0K03465g', 'CAGL0K04653g', 'CAGL0K05379g', 'CAGL0K05797g', 'CAGL0K05813g', 'CAGL0K11572g', 'CAGL0K11836g', 'CAGL0K12804g', 'CAGL0K12826g', 'CAGL0L02519g', 'CAGL0L02541g', 'CAGL0L04686g', 'CAGL0L05236g', 'CAGL0L05720g', 'CAGL0L06072g', 'CAGL0L06732g', 'CAGL0L08734g', 'CAGL0L08756g', 'CAGL0L10560g', 'CAGL0L12386g', 'CAGL0M00836g', 'CAGL0M03305g', 'CAGL0M04081g', 'CAGL0M04213g', 'CAGL0M05467g', 'CAGL0M05995g', 'CAGL0M06325g', 'CAGL0M06347g', 'CAGL0M07315g', 'CAGL0M07689r', 'CAGL0M07691r', 'CAGL0M07693r', 'CAGL0M07695r', 'CAGL0M07700g', 'CAGL0M08470r', 'CAGL0M08514g', 'CAGL0M10461s', 'CAGL0M11572g', 'CAGL0M11660g']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import _pickle as pickle\n",
+    "\n",
+    "# Run this to avoid running everything above this point\n",
+    "pickleIn = open('GOanno.pickle', 'rb')\n",
+    "geneAnno = pickle.load(pickleIn)\n",
+    "print(len(geneAnno.keys()))\n",
+    "print(clust10)\n",
+    "print(clust5)\n",
+    "print(clust11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14 genes found in CgYap1 target list related to keywords:  ['cell wall', 'hyph']\n",
+      "Genes:  {'CAGL0F05137g', 'CAGL0H09130g', 'CAGL0H01375g', 'CAGL0B03069g', 'CAGL0G04873g', 'CAGL0M08514g', 'CAGL0D03256g', 'CAGL0K09350g', 'CAGL0F08833g', 'CAGL0G07491g', 'CAGL0M11704g', 'CAGL0G05027g', 'CAGL0E05412g', 'CAGL0I05390g'}\n",
+      "Annotations:  {'cell wall mannoprotein biosynthetic process', 'hyphal growth', 'fungal-type cell wall organization', 'fungal-type cell wall biogenesis', 'fungal-type cell wall polysaccharide biosynthetic process', 'fungal-type cell wall', 'regulation of cell wall (1-&gt;3)-beta-D-glucan biosynthetic process', 'pseudohyphal growth', 'positive regulation of pseudohyphal growth', 'hyphal cell wall', 'regulation of fungal-type cell wall organization', 'fungal-type cell wall beta-glucan biosynthetic process', 'yeast-form cell wall'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "key_phrases = ['cell wall', 'hyph']\n",
+    "counter_list = []\n",
+    "anno_list = []\n",
+    "\n",
+    "targets = clust5 + clust10 + clust11\n",
+    "\n",
+    "for gene in targets:\n",
+    "    for anno in geneAnno[gene]:\n",
+    "        for phrase in key_phrases:\n",
+    "            if phrase in anno:\n",
+    "                counter_list.append(gene)\n",
+    "                anno_list.append(anno)\n",
+    "            \n",
+    "print(str(len(set(counter_list))) + ' genes found in CgYap1 target list related to keywords: ', str(key_phrases))\n",
+    "print('Genes: ', set(counter_list))\n",
+    "print('Annotations: ',set(anno_list))"
    ]
   }
  ],
